# modern_cmake_example

./: README.md
modern_cmake_tools/: CMakeLists.txt  modern_cmake_toolsConfig.cmake.in
modern_cmake_tools/cmake/: Config.cmake.in  tools_export_package.cmake
project_a/: CMakeLists.txt
project_a/cmake/: project_aConfig.cmake.in
project_a/src/: project_a.cpp
project_a/src/internal_include/: project_a.hpp
project_a_headers/: CMakeLists.txt
project_a_headers/include/project_a/: project_a.hpp
project_b/: CMakeLists.txt
project_b/include/project_b/: project_b.hpp
project_b/src/: project_b.cpp  project_b_main.cpp
